--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 </ul>
 <p><br></p>
 <div class="fragment">
-<div class="fragment highlight-blue">
+<div class="fragment highlight-seagreen">
 <p>A variable can be both a primary key and a foreign key.</p>
 </div>
 </div>
@@ -660,6 +660,10 @@
 </ul>
 </div>
 </section>
+<section id="concept-map-1" class="slide level2">
+<h2>Concept Map</h2>
+
+<img data-src="img/mutating_join.png" class="r-stretch"></section>
 <section id="filtering-joins" class="slide level2">
 <h2>Filtering Joins</h2>
 <div>
