--- a/index.html
+++ b/index.html
@@ -744,6 +744,7 @@
 <li>R for Data Science <a href="https://r4ds.had.co.nz/relational-data.html#relational-data">Chapter 13</a></li>
 <li>Slides made using <a href="https://meghan.rbind.io/blog/quarto-slides/#quarto-resources">Quarto</a></li>
 <li>Art work by <a href="https://github.com/allisonhorst/stats-illustrations">Allison Horst</a></li>
+<li>For more information on <a href="https://github.com/gadenbuie/tidyexplain">joins</a></li>
 </ul>
 </div>
 <div class="footer footer-default">
