--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 </ul>
 <p><br></p>
 <div class="fragment">
-<div class="fragment highlight-seagreen">
+<div class="fragment highlight-red">
 <p>A variable can be both a primary key and a foreign key.</p>
 </div>
 </div>
