--- a/index.html
+++ b/index.html
@@ -619,22 +619,20 @@
 <img data-src="img/all_outer_join.png" class="r-stretch"></section>
 <section id="quiz-2" class="slide level2">
 <h2>Quiz 2</h2>
-<p>:: nonincremental How to combine all observations from the two tables band_members and band_instruments to get a table as shown here.</p>
+<div>
+<p>How to combine all observations from the two tables band_members and band_instruments to get a table as shown here.</p>
 <div class="columns">
 <div class="column" style="width:60%;">
 <ol type="a">
-<li class="fragment">left_join</li>
+<li>left_join ::: {.fragment .highlight-red}</li>
+<li>full_join</li>
 </ol>
-<div class="fragment highlight-red">
-<ol start="2" type="a">
-<li class="fragment">full_join</li>
+</div><ol start="3" type="a">
+<li><p>right_join</p></li>
+<li><p>inner_join</p></li>
 </ol>
 </div>
-<ol start="3" type="a">
-<li class="fragment"><p>right_join</p></li>
-<li class="fragment"><p>inner_join</p></li>
-</ol>
-</div><div class="column" style="width:40%;">
+<div class="column" style="width:40%;">
 <p><img data-src="img/quiz2.png"></p>
 </div>
 </div>
@@ -643,9 +641,7 @@
 <section id="duplicate-keys" class="slide level2">
 <h2>Duplicate Keys</h2>
 <div>
-<ul>
-<li>One table has duplicate keys. This is useful when you want to add in additional information as there is typically a one-to-many relationship.</li>
-</ul>
+<p>One table has duplicate keys. This is useful when you want to add in additional information as there is typically a one-to-many relationship.</p>
 </div>
 </section>
 <section id="demo-1" class="slide level2">
@@ -762,26 +758,27 @@
 </section>
 <section id="quiz-3" class="slide level2">
 <h2>Quiz 3</h2>
-<p>::: nonincremental</p>
+<div>
 <p>How are joins and set operations different from each other? (Choose one or many)</p>
 <div class="fragment highlight-red">
 <ol type="a">
-<li class="fragment">set operations need same column / variable names while joins do not</li>
+<li>set operations need same column / variable names while joins do not</li>
 </ol>
 </div>
 <ol start="2" type="a">
-<li class="fragment">no difference both are same, just different syntax</li>
+<li>no difference both are same, just different syntax</li>
 </ol>
 <div class="fragment highlight-red">
 <ol start="3" type="a">
-<li class="fragment">set operations are base R functions and joins are tidyverse functions</li>
+<li>set operations are base R functions and joins are tidyverse functions</li>
 </ol>
 </div>
 <div class="fragment highlight-red">
 <ol start="4" type="a">
-<li class="fragment">set operations have no keys but joins have keys<br>
+<li>set operations have no keys but joins have keys<br>
 </li>
 </ol>
+</div>
 </div>
 </section>
 <section id="resources" class="slide level2">
