--- a/index.html
+++ b/index.html
@@ -624,19 +624,22 @@
 <div class="columns">
 <div class="column" style="width:60%;">
 <ol type="a">
-<li>left_join ::: {.fragment .highlight-red}</li>
+<li>left_join</li>
+</ol>
+<div class="fragment highlight-red">
+<ol start="2" type="a">
 <li>full_join</li>
 </ol>
-</div><ol start="3" type="a">
+</div>
+<ol start="3" type="a">
 <li><p>right_join</p></li>
 <li><p>inner_join</p></li>
 </ol>
-</div>
-<div class="column" style="width:40%;">
+</div><div class="column" style="width:40%;">
 <p><img data-src="img/quiz2.png"></p>
 </div>
 </div>
-<p>:::</p>
+</div>
 </section>
 <section id="duplicate-keys" class="slide level2">
 <h2>Duplicate Keys</h2>
