--- a/index.html
+++ b/index.html
@@ -406,6 +406,17 @@
 <p><a href="https://www.tidyverse.org/packages/">Learn more</a></p>
 </div>
 </section>
+<section id="shortcut-of-the-day" class="slide level2">
+<h2>Shortcut of the day</h2>
+<div>
+<p><code>Alt + Shift + K</code></p>
+<p><br></p>
+<p>. . .</p>
+<div class="fragment highlight-red">
+<p>Shows all keyboard shortcuts!</p>
+</div>
+</div>
+</section>
 <section id="relational-data" class="slide level2">
 <h2>Relational Data</h2>
 <div>
