--- a/index.html
+++ b/index.html
@@ -408,9 +408,9 @@
 </section>
 <section id="shortcut-of-the-day" class="slide level2">
 <h2>Shortcut of the day</h2>
-<div>
 <p><code>Alt + Shift + K</code></p>
 <p><br></p>
+<div class="fragment">
 <div class="fragment highlight-red">
 <p>Shows all keyboard shortcuts!</p>
 </div>
