--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@ $ plays &lt;chr&gt; "guitar", "bass", "guitar"</code></pre>
 <div>
 <p>How to combine all observations from the two tables band_members and band_instruments to get a table as shown here.</p>
 <div class="columns">
-<div class="column" style="width:60%;">
+<div class="column" style="width:40%;">
 <ol type="a">
 <li>left_join</li>
 </ol>
@@ -665,11 +665,11 @@ $ plays &lt;chr&gt; "guitar", "bass", "guitar"</code></pre>
 </ol>
 </div>
 <ol start="3" type="a">
-<li><p>right_join</p></li>
-<li><p>inner_join</p></li>
+<li>right_join</li>
+<li>inner_join</li>
 </ol>
-</div><div class="column" style="width:40%;">
-<p><img data-src="img/quiz2.png"></p>
+</div><div class="column" style="width:60%;">
+<p><img data-src="img/band_members.png"> <img data-src="img/band_instruments.png"> <img data-src="img/quiz2.png"></p>
 </div>
 </div>
 </div>
