--- a/index.html
+++ b/index.html
@@ -802,20 +802,12 @@ $ plays &lt;chr&gt; "guitar", "bass", "guitar"</code></pre>
 </ol>
 </div>
 <ol start="2" type="a">
-<li>no difference both are same, just different syntax</li>
-</ol>
-<div class="fragment highlight-red">
-<ol start="3" type="a">
-<li>set operations are base R functions and joins are tidyverse functions</li>
-</ol>
-</div>
-<div class="fragment highlight-red">
-<ol start="4" type="a">
+<li>no difference both are same, but have different syntax ::: {.fragment .highlight-red}</li>
 <li>set operations have no keys but joins have keys<br>
 </li>
 </ol>
 </div>
-</div>
+<p>:::</p>
 </section>
 <section id="resources" class="slide level2">
 <h2>Resources</h2>
